<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FormApplication</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_name">Nombre:</string>
    <string name="str_lastname">Ap. Paterno:</string>
    <string name="str_lastname2">Ap. Materno:</string>
    <string name="str_phone">Telefono:</string>
    <string name="str_mail">Correo:</string>
    <string name="str_gender">Género:</string>
    <string name="str_button1">M:</string>
    <string name="str_button2">F:</string>
    <string name="str_password">Contraseña:</string>
    <string name="str_password2">Repetir Contraseña:</string>
    <string name="str_clear">Limpiar</string>
    <string name="str_save">Guardar</string>
    <string name="app_other_activity">Otra Actividá</string>

</resources>
