<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.ipn.extrasproject.MainActivity" >
    
    <EditText
        android:id="@+id/editText1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_x="140dp"
        android:layout_y="10dp"
        android:ems="10" />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="10dp"
        android:text="@string/str_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
        android:id="@+id/editText2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_x="140dp"
        android:layout_y="50dp"
        android:ems="10" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="50dp"
        android:text="@string/str_lastname"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
        android:id="@+id/editText3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_x="140dp"
        android:layout_y="90dp"
        android:ems="10" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="90dp"
        android:text="@string/str_lastname2"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <EditText
        android:id="@+id/editText4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_x="140dp"
        android:layout_y="130dp"
        android:ems="10" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="130dp"
        android:text="@string/str_phone"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <EditText
        android:id="@+id/editText5"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_x="140dp"
        android:layout_y="170dp"
        android:ems="10" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="170dp"
        android:text="@string/str_mail"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
	    android:id="@+id/textView6"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_x="10dp"
	    android:layout_y="210dp"
	    android:text="@string/str_gender"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="140dp"
        android:layout_y="210dp"
        android:text="@string/str_button1" />
    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="190dp"
        android:layout_y="210dp"
        android:text="@string/str_button2" />
    <EditText
        android:id="@+id/editText7"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_x="140dp"
        android:layout_y="250dp"
        android:ems="10" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="250dp"
        android:text="@string/str_password"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <EditText
        android:id="@+id/editText8"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_x="220dp"
        android:layout_y="290dp"
        android:ems="10" />
    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="290dp"
        android:text="@string/str_password2"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="50dp"
        android:layout_y="330dp"
        android:text="@string/str_clear" />
     <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="150dp"
        android:layout_y="330dp"
        android:text="@string/str_save" />

</AbsoluteLayout>
